<resources>
    <string name="app_name">My Application</string>
    <string name="email_address">Email Address</string>
    <string name="example_example_com"><font size="15">example@example.com</font></string>
    <string name="eight_plus_characters"><font size="40">8+ characters</font></string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email_adress">Email adress</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_sing_up">sing_up</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>