<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#7364FF"
    android:orientation="vertical"
    android:paddingStart="33dp"
    android:paddingTop="40dp"
    android:paddingEnd="33dp"
    tools:context=".SingUpActivity"
    >

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="onBack"
        />

    <TextView
        android:id="@+id/tx_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#7364FF"
        android:textSize="42sp" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:text="@string/username"
        android:textColor="#525252"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:minHeight="25dp"
        android:textSize="20sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:text="@string/email_adress"
        android:textColor="#525252"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/example_example_com"
        android:minHeight="25dp"
        android:paddingStart="10dp"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:text="@string/password"
        android:textColor="#525252"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/eight_plus_characters"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"

        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="15"
            android:inputType="textPassword"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

<!--
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:drawableEnd="@drawable/eye_closed"
        android:ems="10"
        android:hint="@string/eight_plus_characters"
        android:minHeight="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="25sp"
        tools:ignore="SpeakableTextPresentCheck"
        android:inputType="textPassword" />
-->

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#7364FF"
        android:text="@string/register"
        android:onClick="register"
        app:cornerRadius="20dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="352dp"
        app:srcCompat="@drawable/signup_bottom_image" />
</LinearLayout>